skattetrekk.css
html, body {
    margin: 0em;
    height: 100%;
    width: 100%;
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
    background: #3c3176;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
}

header, footer {
    width: 100%;
    background-color: #3c3176; 
    color: rgb(211, 211, 211); 
    height: 3em;
    display: inline-flex;
    justify-content: space-between;
}

header a, footer a {
    margin: 1em;
    color: rgb(211, 211, 211);
    align-self: center;
}

.menu-icon {
    cursor: pointer;
    float: right;
    width: 1em;
    height: 1em;
    margin: 1em;
}

.nav {
    display: none;
}

nav {
    float: right;
    background-color: #857DB1;
    height: 100%;
    width: 12em;
    margin-top: 0;
    position: relative;
    z-index: 3;
}

nav ul {
    margin-top: 3em;
    list-style-type: none;
    background-color: #5d5393;
}

nav ul li {
    padding: 1em 0;
    margin-left: -2.2em;
    text-align: left;
}

.exit-btn {
    width: .8em;
    float: right;
    padding: 0.5em;
    margin: .7em .5em 0 0;
    cursor: pointer;
    background-color: #857DB1;
}

.after-header {
    height: 20em;
    display: flex;
    align-items: flex-end;
    margin: 1.5em 0 0.75em;
}
.after-header p {
    color: rgb(211, 211, 211);
    font-size: 20px;
    padding: .2em .4em;
    text-transform: uppercase;
    border-bottom: 2px solid #857DB1;
    border-right: 2px solid #857DB1;
    margin-bottom: 2em;
}


.box-calc {
    height: 40em;
    width: 30em; 
    background: #857DB1;
    font-weight: 500;
    border-radius: 1px;
    transition: all .3s ease-in-out;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 0;
    margin-bottom: 2em;
    
   
}
.box-calc:hover {
    transform: scale(1.028);
}

.mortgage-form {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: flex-start;
    z-index: 1;
    color: black;
    font-weight: 300;
}

.box-left li, .box-right li {
    list-style-type: none;
    margin-left: -2.35em;
    margin-top: .5em;
    height: 3em;
    display: flex;
    align-items: center;
    z-index: 2;
    
}
.box-left li:last-child, .box-right li:last-child {
    margin-top: 2em;
}

.box-right li {
    justify-content: flex-end;
}

.box-left {
    margin-right: .2em;
}
.box-right {
    margin-left: .2em;
}
    
.box-left li button {
    width: 200px;
    height: 50px;
    padding: 0 1.5em;
    border-radius: 10px;
    font-size: 20px;
    color: rgb(211, 211, 211);
    background-color: #221858;
    border: 1px solid #221858;
    transition: all .1s ease-in-out;
    outline: none;
}

.box-left li button:hover {
    cursor: pointer;
    transform: scale(1.1);
    background-color: #3c3176;
    color: #ffffff;
}

.box-right li input {
    width: 200px;
    height: 2.9em;
    border-radius: 5px;
    border-style: none;
    outline: none; /* fjerner firkant rundt input når den er i focus */
    font-size: 16px;
    text-indent: 16px;
    letter-spacing: .5px;
    background-color: #d4cdf8;
    color: rgb(43, 43, 43);
}
/* for å skru av arrows i numberfield input */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none; 
    margin: 0; 
}
/* for å skru av arrows i numberfield input i firefox */
input[type=number] {
    -moz-appearance:textfield;
}

.box-right input:hover {
    background-color: #c3bde2;
}



@media ( max-width: 1024px){

    body {
        font-size: 18px;
    }

    header h3 {
        font-size: 20px;
    }

    .menu-icon{
        width: 16px;
        padding-left: 1em;
    }

    nav{
        width: 11.66em;
        margin-top: 0;
    }

    .box-calc {
        height: 40em;
        width: 26em; 
    }

    .box-left li button {
        width: 85%;
        height: 80%;
        font-size: 18px;
    }

    .box-right li input {
        width: 90%;
        height: 75%;
        text-indent: 14px;
    }
}

@media (max-width:640px){

    body {
        font-size: 16px;
    }
    .after-header p {
        font-size: 16px;
    }

    .menu-icon{
        width: 14px;
        padding-left: .5em;
    }

    nav {
        width: 12.1em;
        margin-top: 0;
    }

    .box-calc {
        height: 42em;
        width: 24em; 
    }
    
     .mortgage-form {
        width: 95%;
        height: 95%;
    }

    .box-left li {
        width: 135%;
    }

    .box-right li {
        width: 120%;
    }

    .box-left li button {
        height: 80%;
        width: 95%;
        font-size: 16px;
    }

    .box-right li input {
        width: 90%;
        height: 75%;
        text-indent: 12px;
        font-size: 16px;
    }

    .box-right li input:last-child {
        width: 90%;
        height: 75%;
        text-indent: 5px;
        font-size: 16px;
    }
}

